// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing homeActions Testing Fail Actions featuredList is not set on setFeaturedListFail 1`] = `
Array [
  Object {
    "payload": Object {
      "10402": "Music",
      "10749": "Romance",
      "10751": "Family",
      "10752": "War",
      "10770": "TV Movie",
      "12": "Adventure",
      "14": "Fantasy",
      "16": "Animation",
      "18": "Drama",
      "27": "Horror",
      "28": "Action",
      "35": "Comedy",
      "36": "History",
      "37": "Western",
      "53": "Thriller",
      "80": "Crime",
      "878": "Science Fiction",
      "9648": "Mystery",
      "99": "Documentary",
    },
    "type": "SET_GENRE_MAP_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/6X2YjjYcs8XyZRDmJAHNDlls7L4.jpg",
        "genre_ids": Array [
          35,
          80,
          18,
        ],
        "id": 429203,
        "original_language": "en",
        "original_title": "The Old Man & the Gun",
        "overview": "The true story of Forrest Tucker, from his audacious escape from San Quentin at the age of 70 to an unprecedented string of heists that confounded authorities and enchanted the public. Wrapped up in the pursuit are a detective, who becomes captivated with Forrest’s commitment to his craft, and a woman, who loves him in spite of his chosen profession.",
        "popularity": 283.548,
        "poster_path": "/a4BfxRK8dBgbQqbRxPs8kmLd8LG.jpg",
        "release_date": "2018-09-28",
        "title": "The Old Man & the Gun",
        "video": false,
        "vote_average": 6.3,
        "vote_count": 577,
      },
      Object {
        "adult": false,
        "backdrop_path": "/5myQbDzw3l8K9yofUXRJ4UTVgam.jpg",
        "genre_ids": Array [
          28,
          12,
          878,
        ],
        "id": 429617,
        "original_language": "en",
        "original_title": "Spider-Man: Far from Home",
        "overview": "Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent.",
        "popularity": 234.305,
        "poster_path": "/lcq8dVxeeOqHvvgcte707K0KVx5.jpg",
        "release_date": "2019-07-02",
        "title": "Spider-Man: Far from Home",
        "video": false,
        "vote_average": 7.7,
        "vote_count": 4044,
      },
    ],
    "type": "SET_FEATURED_LIST_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/qJXqEzjJOa93q50mrSSEr1ELsD6.jpg",
        "genre_ids": Array [
          10749,
          10751,
        ],
        "id": 540158,
        "original_language": "en",
        "original_title": "High Strung Free Dance",
        "overview": "Zander Raines, a dazzling and tempestuous young choreographer, gives the break of a lifetime to two hopeful artists when he casts a stunning contemporary dancer, Barlow, and innovative pianist, Charlie, in New York’s most-anticipated new Broadway show: Free Dance. But the move throws off the show’s delicate creative balance when Charlie falls hard for Barlow while Zander embraces her as his muse.",
        "popularity": 9.434,
        "poster_path": "/zMwr9vNMHNCNatIPm7Oter0NVw.jpg",
        "release_date": "2019-10-11",
        "title": "High Strung Free Dance",
        "video": false,
        "vote_average": 7.3,
        "vote_count": 53,
      },
      Object {
        "adult": false,
        "backdrop_path": "/a47QIHxJnLLBDnTOwopZ8YBhxfl.jpg",
        "genre_ids": Array [
          35,
          27,
        ],
        "id": 13094,
        "original_language": "en",
        "original_title": "Dance of the Dead",
        "overview": "With Prom only hours away, the usual suspects of Cosa High (Cheerleaders, geeks, bad boys and the happy-go-lucky student council alike) are preoccupied with the annual rituals of teendom. On the night of the big dance when the dead unexpectedly rise to eat the living, polar opposite groups will be forced to unite in their final chance to save the town from the zombies.",
        "popularity": 4.996,
        "poster_path": "/A4PmOlgQupYv9GNpsaRBHBBTBFf.jpg",
        "release_date": "2008-10-14",
        "title": "Dance of the Dead",
        "video": false,
        "vote_average": 6,
        "vote_count": 99,
      },
    ],
    "type": "SET_SHOWN_LIST_SUCCESS",
  },
  Object {
    "payload": 54,
    "type": "SET_TOTAL_PAGES_SUCCESS",
  },
  Object {
    "payload": 634,
    "type": "SET_TOTAL_RESULTS_SUCCESS",
  },
  Object {
    "payload": false,
    "type": "SEARCH_ISEMPTY",
  },
  Object {
    "payload": false,
    "type": "SORTBY_RATING",
  },
  Object {
    "payload": "candy",
    "type": "SET_SEARCH_VAL",
  },
  Object {
    "payload": 5,
    "type": "SET_RESULT_PAGE",
  },
  Object {
    "payload": "error trying to set genreMap",
    "type": "SET_GENRE_MAP_FAIL",
  },
  Object {
    "payload": "error trying to set featuredList",
    "type": "SET_FEATURED_LIST_FAIL",
  },
]
`;

exports[`Testing homeActions Testing Fail Actions genreMap is not set on setGenreMapFail 1`] = `
Array [
  Object {
    "payload": Object {
      "10402": "Music",
      "10749": "Romance",
      "10751": "Family",
      "10752": "War",
      "10770": "TV Movie",
      "12": "Adventure",
      "14": "Fantasy",
      "16": "Animation",
      "18": "Drama",
      "27": "Horror",
      "28": "Action",
      "35": "Comedy",
      "36": "History",
      "37": "Western",
      "53": "Thriller",
      "80": "Crime",
      "878": "Science Fiction",
      "9648": "Mystery",
      "99": "Documentary",
    },
    "type": "SET_GENRE_MAP_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/6X2YjjYcs8XyZRDmJAHNDlls7L4.jpg",
        "genre_ids": Array [
          35,
          80,
          18,
        ],
        "id": 429203,
        "original_language": "en",
        "original_title": "The Old Man & the Gun",
        "overview": "The true story of Forrest Tucker, from his audacious escape from San Quentin at the age of 70 to an unprecedented string of heists that confounded authorities and enchanted the public. Wrapped up in the pursuit are a detective, who becomes captivated with Forrest’s commitment to his craft, and a woman, who loves him in spite of his chosen profession.",
        "popularity": 283.548,
        "poster_path": "/a4BfxRK8dBgbQqbRxPs8kmLd8LG.jpg",
        "release_date": "2018-09-28",
        "title": "The Old Man & the Gun",
        "video": false,
        "vote_average": 6.3,
        "vote_count": 577,
      },
      Object {
        "adult": false,
        "backdrop_path": "/5myQbDzw3l8K9yofUXRJ4UTVgam.jpg",
        "genre_ids": Array [
          28,
          12,
          878,
        ],
        "id": 429617,
        "original_language": "en",
        "original_title": "Spider-Man: Far from Home",
        "overview": "Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent.",
        "popularity": 234.305,
        "poster_path": "/lcq8dVxeeOqHvvgcte707K0KVx5.jpg",
        "release_date": "2019-07-02",
        "title": "Spider-Man: Far from Home",
        "video": false,
        "vote_average": 7.7,
        "vote_count": 4044,
      },
    ],
    "type": "SET_FEATURED_LIST_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/qJXqEzjJOa93q50mrSSEr1ELsD6.jpg",
        "genre_ids": Array [
          10749,
          10751,
        ],
        "id": 540158,
        "original_language": "en",
        "original_title": "High Strung Free Dance",
        "overview": "Zander Raines, a dazzling and tempestuous young choreographer, gives the break of a lifetime to two hopeful artists when he casts a stunning contemporary dancer, Barlow, and innovative pianist, Charlie, in New York’s most-anticipated new Broadway show: Free Dance. But the move throws off the show’s delicate creative balance when Charlie falls hard for Barlow while Zander embraces her as his muse.",
        "popularity": 9.434,
        "poster_path": "/zMwr9vNMHNCNatIPm7Oter0NVw.jpg",
        "release_date": "2019-10-11",
        "title": "High Strung Free Dance",
        "video": false,
        "vote_average": 7.3,
        "vote_count": 53,
      },
      Object {
        "adult": false,
        "backdrop_path": "/a47QIHxJnLLBDnTOwopZ8YBhxfl.jpg",
        "genre_ids": Array [
          35,
          27,
        ],
        "id": 13094,
        "original_language": "en",
        "original_title": "Dance of the Dead",
        "overview": "With Prom only hours away, the usual suspects of Cosa High (Cheerleaders, geeks, bad boys and the happy-go-lucky student council alike) are preoccupied with the annual rituals of teendom. On the night of the big dance when the dead unexpectedly rise to eat the living, polar opposite groups will be forced to unite in their final chance to save the town from the zombies.",
        "popularity": 4.996,
        "poster_path": "/A4PmOlgQupYv9GNpsaRBHBBTBFf.jpg",
        "release_date": "2008-10-14",
        "title": "Dance of the Dead",
        "video": false,
        "vote_average": 6,
        "vote_count": 99,
      },
    ],
    "type": "SET_SHOWN_LIST_SUCCESS",
  },
  Object {
    "payload": 54,
    "type": "SET_TOTAL_PAGES_SUCCESS",
  },
  Object {
    "payload": 634,
    "type": "SET_TOTAL_RESULTS_SUCCESS",
  },
  Object {
    "payload": false,
    "type": "SEARCH_ISEMPTY",
  },
  Object {
    "payload": false,
    "type": "SORTBY_RATING",
  },
  Object {
    "payload": "candy",
    "type": "SET_SEARCH_VAL",
  },
  Object {
    "payload": 5,
    "type": "SET_RESULT_PAGE",
  },
  Object {
    "payload": "error trying to set genreMap",
    "type": "SET_GENRE_MAP_FAIL",
  },
]
`;

exports[`Testing homeActions Testing Fail Actions shownList is not set on searchFilmsFail 1`] = `
Array [
  Object {
    "payload": Object {
      "10402": "Music",
      "10749": "Romance",
      "10751": "Family",
      "10752": "War",
      "10770": "TV Movie",
      "12": "Adventure",
      "14": "Fantasy",
      "16": "Animation",
      "18": "Drama",
      "27": "Horror",
      "28": "Action",
      "35": "Comedy",
      "36": "History",
      "37": "Western",
      "53": "Thriller",
      "80": "Crime",
      "878": "Science Fiction",
      "9648": "Mystery",
      "99": "Documentary",
    },
    "type": "SET_GENRE_MAP_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/6X2YjjYcs8XyZRDmJAHNDlls7L4.jpg",
        "genre_ids": Array [
          35,
          80,
          18,
        ],
        "id": 429203,
        "original_language": "en",
        "original_title": "The Old Man & the Gun",
        "overview": "The true story of Forrest Tucker, from his audacious escape from San Quentin at the age of 70 to an unprecedented string of heists that confounded authorities and enchanted the public. Wrapped up in the pursuit are a detective, who becomes captivated with Forrest’s commitment to his craft, and a woman, who loves him in spite of his chosen profession.",
        "popularity": 283.548,
        "poster_path": "/a4BfxRK8dBgbQqbRxPs8kmLd8LG.jpg",
        "release_date": "2018-09-28",
        "title": "The Old Man & the Gun",
        "video": false,
        "vote_average": 6.3,
        "vote_count": 577,
      },
      Object {
        "adult": false,
        "backdrop_path": "/5myQbDzw3l8K9yofUXRJ4UTVgam.jpg",
        "genre_ids": Array [
          28,
          12,
          878,
        ],
        "id": 429617,
        "original_language": "en",
        "original_title": "Spider-Man: Far from Home",
        "overview": "Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent.",
        "popularity": 234.305,
        "poster_path": "/lcq8dVxeeOqHvvgcte707K0KVx5.jpg",
        "release_date": "2019-07-02",
        "title": "Spider-Man: Far from Home",
        "video": false,
        "vote_average": 7.7,
        "vote_count": 4044,
      },
    ],
    "type": "SET_FEATURED_LIST_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/qJXqEzjJOa93q50mrSSEr1ELsD6.jpg",
        "genre_ids": Array [
          10749,
          10751,
        ],
        "id": 540158,
        "original_language": "en",
        "original_title": "High Strung Free Dance",
        "overview": "Zander Raines, a dazzling and tempestuous young choreographer, gives the break of a lifetime to two hopeful artists when he casts a stunning contemporary dancer, Barlow, and innovative pianist, Charlie, in New York’s most-anticipated new Broadway show: Free Dance. But the move throws off the show’s delicate creative balance when Charlie falls hard for Barlow while Zander embraces her as his muse.",
        "popularity": 9.434,
        "poster_path": "/zMwr9vNMHNCNatIPm7Oter0NVw.jpg",
        "release_date": "2019-10-11",
        "title": "High Strung Free Dance",
        "video": false,
        "vote_average": 7.3,
        "vote_count": 53,
      },
      Object {
        "adult": false,
        "backdrop_path": "/a47QIHxJnLLBDnTOwopZ8YBhxfl.jpg",
        "genre_ids": Array [
          35,
          27,
        ],
        "id": 13094,
        "original_language": "en",
        "original_title": "Dance of the Dead",
        "overview": "With Prom only hours away, the usual suspects of Cosa High (Cheerleaders, geeks, bad boys and the happy-go-lucky student council alike) are preoccupied with the annual rituals of teendom. On the night of the big dance when the dead unexpectedly rise to eat the living, polar opposite groups will be forced to unite in their final chance to save the town from the zombies.",
        "popularity": 4.996,
        "poster_path": "/A4PmOlgQupYv9GNpsaRBHBBTBFf.jpg",
        "release_date": "2008-10-14",
        "title": "Dance of the Dead",
        "video": false,
        "vote_average": 6,
        "vote_count": 99,
      },
    ],
    "type": "SET_SHOWN_LIST_SUCCESS",
  },
  Object {
    "payload": 54,
    "type": "SET_TOTAL_PAGES_SUCCESS",
  },
  Object {
    "payload": 634,
    "type": "SET_TOTAL_RESULTS_SUCCESS",
  },
  Object {
    "payload": false,
    "type": "SEARCH_ISEMPTY",
  },
  Object {
    "payload": false,
    "type": "SORTBY_RATING",
  },
  Object {
    "payload": "candy",
    "type": "SET_SEARCH_VAL",
  },
  Object {
    "payload": 5,
    "type": "SET_RESULT_PAGE",
  },
  Object {
    "payload": "error trying to set genreMap",
    "type": "SET_GENRE_MAP_FAIL",
  },
  Object {
    "payload": "error trying to set featuredList",
    "type": "SET_FEATURED_LIST_FAIL",
  },
  Object {
    "payload": "error trying to set shownList",
    "type": "SEARCH_FILMS_FAIL",
  },
]
`;

exports[`Testing homeActions Testing Success Actions featuredList is set on action setFeaturedListSuccess 1`] = `
Array [
  Object {
    "payload": Object {
      "10402": "Music",
      "10749": "Romance",
      "10751": "Family",
      "10752": "War",
      "10770": "TV Movie",
      "12": "Adventure",
      "14": "Fantasy",
      "16": "Animation",
      "18": "Drama",
      "27": "Horror",
      "28": "Action",
      "35": "Comedy",
      "36": "History",
      "37": "Western",
      "53": "Thriller",
      "80": "Crime",
      "878": "Science Fiction",
      "9648": "Mystery",
      "99": "Documentary",
    },
    "type": "SET_GENRE_MAP_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/6X2YjjYcs8XyZRDmJAHNDlls7L4.jpg",
        "genre_ids": Array [
          35,
          80,
          18,
        ],
        "id": 429203,
        "original_language": "en",
        "original_title": "The Old Man & the Gun",
        "overview": "The true story of Forrest Tucker, from his audacious escape from San Quentin at the age of 70 to an unprecedented string of heists that confounded authorities and enchanted the public. Wrapped up in the pursuit are a detective, who becomes captivated with Forrest’s commitment to his craft, and a woman, who loves him in spite of his chosen profession.",
        "popularity": 283.548,
        "poster_path": "/a4BfxRK8dBgbQqbRxPs8kmLd8LG.jpg",
        "release_date": "2018-09-28",
        "title": "The Old Man & the Gun",
        "video": false,
        "vote_average": 6.3,
        "vote_count": 577,
      },
      Object {
        "adult": false,
        "backdrop_path": "/5myQbDzw3l8K9yofUXRJ4UTVgam.jpg",
        "genre_ids": Array [
          28,
          12,
          878,
        ],
        "id": 429617,
        "original_language": "en",
        "original_title": "Spider-Man: Far from Home",
        "overview": "Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent.",
        "popularity": 234.305,
        "poster_path": "/lcq8dVxeeOqHvvgcte707K0KVx5.jpg",
        "release_date": "2019-07-02",
        "title": "Spider-Man: Far from Home",
        "video": false,
        "vote_average": 7.7,
        "vote_count": 4044,
      },
    ],
    "type": "SET_FEATURED_LIST_SUCCESS",
  },
]
`;

exports[`Testing homeActions Testing Success Actions genreMap is set on action setGenreMapSuccess 1`] = `
Array [
  Object {
    "payload": Object {
      "10402": "Music",
      "10749": "Romance",
      "10751": "Family",
      "10752": "War",
      "10770": "TV Movie",
      "12": "Adventure",
      "14": "Fantasy",
      "16": "Animation",
      "18": "Drama",
      "27": "Horror",
      "28": "Action",
      "35": "Comedy",
      "36": "History",
      "37": "Western",
      "53": "Thriller",
      "80": "Crime",
      "878": "Science Fiction",
      "9648": "Mystery",
      "99": "Documentary",
    },
    "type": "SET_GENRE_MAP_SUCCESS",
  },
]
`;

exports[`Testing homeActions Testing Success Actions resultPage is set on action setResultPage 1`] = `
Array [
  Object {
    "payload": Object {
      "10402": "Music",
      "10749": "Romance",
      "10751": "Family",
      "10752": "War",
      "10770": "TV Movie",
      "12": "Adventure",
      "14": "Fantasy",
      "16": "Animation",
      "18": "Drama",
      "27": "Horror",
      "28": "Action",
      "35": "Comedy",
      "36": "History",
      "37": "Western",
      "53": "Thriller",
      "80": "Crime",
      "878": "Science Fiction",
      "9648": "Mystery",
      "99": "Documentary",
    },
    "type": "SET_GENRE_MAP_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/6X2YjjYcs8XyZRDmJAHNDlls7L4.jpg",
        "genre_ids": Array [
          35,
          80,
          18,
        ],
        "id": 429203,
        "original_language": "en",
        "original_title": "The Old Man & the Gun",
        "overview": "The true story of Forrest Tucker, from his audacious escape from San Quentin at the age of 70 to an unprecedented string of heists that confounded authorities and enchanted the public. Wrapped up in the pursuit are a detective, who becomes captivated with Forrest’s commitment to his craft, and a woman, who loves him in spite of his chosen profession.",
        "popularity": 283.548,
        "poster_path": "/a4BfxRK8dBgbQqbRxPs8kmLd8LG.jpg",
        "release_date": "2018-09-28",
        "title": "The Old Man & the Gun",
        "video": false,
        "vote_average": 6.3,
        "vote_count": 577,
      },
      Object {
        "adult": false,
        "backdrop_path": "/5myQbDzw3l8K9yofUXRJ4UTVgam.jpg",
        "genre_ids": Array [
          28,
          12,
          878,
        ],
        "id": 429617,
        "original_language": "en",
        "original_title": "Spider-Man: Far from Home",
        "overview": "Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent.",
        "popularity": 234.305,
        "poster_path": "/lcq8dVxeeOqHvvgcte707K0KVx5.jpg",
        "release_date": "2019-07-02",
        "title": "Spider-Man: Far from Home",
        "video": false,
        "vote_average": 7.7,
        "vote_count": 4044,
      },
    ],
    "type": "SET_FEATURED_LIST_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/qJXqEzjJOa93q50mrSSEr1ELsD6.jpg",
        "genre_ids": Array [
          10749,
          10751,
        ],
        "id": 540158,
        "original_language": "en",
        "original_title": "High Strung Free Dance",
        "overview": "Zander Raines, a dazzling and tempestuous young choreographer, gives the break of a lifetime to two hopeful artists when he casts a stunning contemporary dancer, Barlow, and innovative pianist, Charlie, in New York’s most-anticipated new Broadway show: Free Dance. But the move throws off the show’s delicate creative balance when Charlie falls hard for Barlow while Zander embraces her as his muse.",
        "popularity": 9.434,
        "poster_path": "/zMwr9vNMHNCNatIPm7Oter0NVw.jpg",
        "release_date": "2019-10-11",
        "title": "High Strung Free Dance",
        "video": false,
        "vote_average": 7.3,
        "vote_count": 53,
      },
      Object {
        "adult": false,
        "backdrop_path": "/a47QIHxJnLLBDnTOwopZ8YBhxfl.jpg",
        "genre_ids": Array [
          35,
          27,
        ],
        "id": 13094,
        "original_language": "en",
        "original_title": "Dance of the Dead",
        "overview": "With Prom only hours away, the usual suspects of Cosa High (Cheerleaders, geeks, bad boys and the happy-go-lucky student council alike) are preoccupied with the annual rituals of teendom. On the night of the big dance when the dead unexpectedly rise to eat the living, polar opposite groups will be forced to unite in their final chance to save the town from the zombies.",
        "popularity": 4.996,
        "poster_path": "/A4PmOlgQupYv9GNpsaRBHBBTBFf.jpg",
        "release_date": "2008-10-14",
        "title": "Dance of the Dead",
        "video": false,
        "vote_average": 6,
        "vote_count": 99,
      },
    ],
    "type": "SET_SHOWN_LIST_SUCCESS",
  },
  Object {
    "payload": 54,
    "type": "SET_TOTAL_PAGES_SUCCESS",
  },
  Object {
    "payload": 634,
    "type": "SET_TOTAL_RESULTS_SUCCESS",
  },
  Object {
    "payload": false,
    "type": "SEARCH_ISEMPTY",
  },
  Object {
    "payload": false,
    "type": "SORTBY_RATING",
  },
  Object {
    "payload": "candy",
    "type": "SET_SEARCH_VAL",
  },
  Object {
    "payload": 5,
    "type": "SET_RESULT_PAGE",
  },
]
`;

exports[`Testing homeActions Testing Success Actions searchIsEmpty is set on action flipSearchIsEmpty 1`] = `
Array [
  Object {
    "payload": Object {
      "10402": "Music",
      "10749": "Romance",
      "10751": "Family",
      "10752": "War",
      "10770": "TV Movie",
      "12": "Adventure",
      "14": "Fantasy",
      "16": "Animation",
      "18": "Drama",
      "27": "Horror",
      "28": "Action",
      "35": "Comedy",
      "36": "History",
      "37": "Western",
      "53": "Thriller",
      "80": "Crime",
      "878": "Science Fiction",
      "9648": "Mystery",
      "99": "Documentary",
    },
    "type": "SET_GENRE_MAP_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/6X2YjjYcs8XyZRDmJAHNDlls7L4.jpg",
        "genre_ids": Array [
          35,
          80,
          18,
        ],
        "id": 429203,
        "original_language": "en",
        "original_title": "The Old Man & the Gun",
        "overview": "The true story of Forrest Tucker, from his audacious escape from San Quentin at the age of 70 to an unprecedented string of heists that confounded authorities and enchanted the public. Wrapped up in the pursuit are a detective, who becomes captivated with Forrest’s commitment to his craft, and a woman, who loves him in spite of his chosen profession.",
        "popularity": 283.548,
        "poster_path": "/a4BfxRK8dBgbQqbRxPs8kmLd8LG.jpg",
        "release_date": "2018-09-28",
        "title": "The Old Man & the Gun",
        "video": false,
        "vote_average": 6.3,
        "vote_count": 577,
      },
      Object {
        "adult": false,
        "backdrop_path": "/5myQbDzw3l8K9yofUXRJ4UTVgam.jpg",
        "genre_ids": Array [
          28,
          12,
          878,
        ],
        "id": 429617,
        "original_language": "en",
        "original_title": "Spider-Man: Far from Home",
        "overview": "Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent.",
        "popularity": 234.305,
        "poster_path": "/lcq8dVxeeOqHvvgcte707K0KVx5.jpg",
        "release_date": "2019-07-02",
        "title": "Spider-Man: Far from Home",
        "video": false,
        "vote_average": 7.7,
        "vote_count": 4044,
      },
    ],
    "type": "SET_FEATURED_LIST_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/qJXqEzjJOa93q50mrSSEr1ELsD6.jpg",
        "genre_ids": Array [
          10749,
          10751,
        ],
        "id": 540158,
        "original_language": "en",
        "original_title": "High Strung Free Dance",
        "overview": "Zander Raines, a dazzling and tempestuous young choreographer, gives the break of a lifetime to two hopeful artists when he casts a stunning contemporary dancer, Barlow, and innovative pianist, Charlie, in New York’s most-anticipated new Broadway show: Free Dance. But the move throws off the show’s delicate creative balance when Charlie falls hard for Barlow while Zander embraces her as his muse.",
        "popularity": 9.434,
        "poster_path": "/zMwr9vNMHNCNatIPm7Oter0NVw.jpg",
        "release_date": "2019-10-11",
        "title": "High Strung Free Dance",
        "video": false,
        "vote_average": 7.3,
        "vote_count": 53,
      },
      Object {
        "adult": false,
        "backdrop_path": "/a47QIHxJnLLBDnTOwopZ8YBhxfl.jpg",
        "genre_ids": Array [
          35,
          27,
        ],
        "id": 13094,
        "original_language": "en",
        "original_title": "Dance of the Dead",
        "overview": "With Prom only hours away, the usual suspects of Cosa High (Cheerleaders, geeks, bad boys and the happy-go-lucky student council alike) are preoccupied with the annual rituals of teendom. On the night of the big dance when the dead unexpectedly rise to eat the living, polar opposite groups will be forced to unite in their final chance to save the town from the zombies.",
        "popularity": 4.996,
        "poster_path": "/A4PmOlgQupYv9GNpsaRBHBBTBFf.jpg",
        "release_date": "2008-10-14",
        "title": "Dance of the Dead",
        "video": false,
        "vote_average": 6,
        "vote_count": 99,
      },
    ],
    "type": "SET_SHOWN_LIST_SUCCESS",
  },
  Object {
    "payload": 54,
    "type": "SET_TOTAL_PAGES_SUCCESS",
  },
  Object {
    "payload": 634,
    "type": "SET_TOTAL_RESULTS_SUCCESS",
  },
  Object {
    "payload": false,
    "type": "SEARCH_ISEMPTY",
  },
]
`;

exports[`Testing homeActions Testing Success Actions searchVal is set on action setSearchValue 1`] = `
Array [
  Object {
    "payload": Object {
      "10402": "Music",
      "10749": "Romance",
      "10751": "Family",
      "10752": "War",
      "10770": "TV Movie",
      "12": "Adventure",
      "14": "Fantasy",
      "16": "Animation",
      "18": "Drama",
      "27": "Horror",
      "28": "Action",
      "35": "Comedy",
      "36": "History",
      "37": "Western",
      "53": "Thriller",
      "80": "Crime",
      "878": "Science Fiction",
      "9648": "Mystery",
      "99": "Documentary",
    },
    "type": "SET_GENRE_MAP_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/6X2YjjYcs8XyZRDmJAHNDlls7L4.jpg",
        "genre_ids": Array [
          35,
          80,
          18,
        ],
        "id": 429203,
        "original_language": "en",
        "original_title": "The Old Man & the Gun",
        "overview": "The true story of Forrest Tucker, from his audacious escape from San Quentin at the age of 70 to an unprecedented string of heists that confounded authorities and enchanted the public. Wrapped up in the pursuit are a detective, who becomes captivated with Forrest’s commitment to his craft, and a woman, who loves him in spite of his chosen profession.",
        "popularity": 283.548,
        "poster_path": "/a4BfxRK8dBgbQqbRxPs8kmLd8LG.jpg",
        "release_date": "2018-09-28",
        "title": "The Old Man & the Gun",
        "video": false,
        "vote_average": 6.3,
        "vote_count": 577,
      },
      Object {
        "adult": false,
        "backdrop_path": "/5myQbDzw3l8K9yofUXRJ4UTVgam.jpg",
        "genre_ids": Array [
          28,
          12,
          878,
        ],
        "id": 429617,
        "original_language": "en",
        "original_title": "Spider-Man: Far from Home",
        "overview": "Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent.",
        "popularity": 234.305,
        "poster_path": "/lcq8dVxeeOqHvvgcte707K0KVx5.jpg",
        "release_date": "2019-07-02",
        "title": "Spider-Man: Far from Home",
        "video": false,
        "vote_average": 7.7,
        "vote_count": 4044,
      },
    ],
    "type": "SET_FEATURED_LIST_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/qJXqEzjJOa93q50mrSSEr1ELsD6.jpg",
        "genre_ids": Array [
          10749,
          10751,
        ],
        "id": 540158,
        "original_language": "en",
        "original_title": "High Strung Free Dance",
        "overview": "Zander Raines, a dazzling and tempestuous young choreographer, gives the break of a lifetime to two hopeful artists when he casts a stunning contemporary dancer, Barlow, and innovative pianist, Charlie, in New York’s most-anticipated new Broadway show: Free Dance. But the move throws off the show’s delicate creative balance when Charlie falls hard for Barlow while Zander embraces her as his muse.",
        "popularity": 9.434,
        "poster_path": "/zMwr9vNMHNCNatIPm7Oter0NVw.jpg",
        "release_date": "2019-10-11",
        "title": "High Strung Free Dance",
        "video": false,
        "vote_average": 7.3,
        "vote_count": 53,
      },
      Object {
        "adult": false,
        "backdrop_path": "/a47QIHxJnLLBDnTOwopZ8YBhxfl.jpg",
        "genre_ids": Array [
          35,
          27,
        ],
        "id": 13094,
        "original_language": "en",
        "original_title": "Dance of the Dead",
        "overview": "With Prom only hours away, the usual suspects of Cosa High (Cheerleaders, geeks, bad boys and the happy-go-lucky student council alike) are preoccupied with the annual rituals of teendom. On the night of the big dance when the dead unexpectedly rise to eat the living, polar opposite groups will be forced to unite in their final chance to save the town from the zombies.",
        "popularity": 4.996,
        "poster_path": "/A4PmOlgQupYv9GNpsaRBHBBTBFf.jpg",
        "release_date": "2008-10-14",
        "title": "Dance of the Dead",
        "video": false,
        "vote_average": 6,
        "vote_count": 99,
      },
    ],
    "type": "SET_SHOWN_LIST_SUCCESS",
  },
  Object {
    "payload": 54,
    "type": "SET_TOTAL_PAGES_SUCCESS",
  },
  Object {
    "payload": 634,
    "type": "SET_TOTAL_RESULTS_SUCCESS",
  },
  Object {
    "payload": false,
    "type": "SEARCH_ISEMPTY",
  },
  Object {
    "payload": false,
    "type": "SORTBY_RATING",
  },
  Object {
    "payload": "candy",
    "type": "SET_SEARCH_VAL",
  },
]
`;

exports[`Testing homeActions Testing Success Actions shownList is set on action setShownListSuccess 1`] = `
Array [
  Object {
    "payload": Object {
      "10402": "Music",
      "10749": "Romance",
      "10751": "Family",
      "10752": "War",
      "10770": "TV Movie",
      "12": "Adventure",
      "14": "Fantasy",
      "16": "Animation",
      "18": "Drama",
      "27": "Horror",
      "28": "Action",
      "35": "Comedy",
      "36": "History",
      "37": "Western",
      "53": "Thriller",
      "80": "Crime",
      "878": "Science Fiction",
      "9648": "Mystery",
      "99": "Documentary",
    },
    "type": "SET_GENRE_MAP_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/6X2YjjYcs8XyZRDmJAHNDlls7L4.jpg",
        "genre_ids": Array [
          35,
          80,
          18,
        ],
        "id": 429203,
        "original_language": "en",
        "original_title": "The Old Man & the Gun",
        "overview": "The true story of Forrest Tucker, from his audacious escape from San Quentin at the age of 70 to an unprecedented string of heists that confounded authorities and enchanted the public. Wrapped up in the pursuit are a detective, who becomes captivated with Forrest’s commitment to his craft, and a woman, who loves him in spite of his chosen profession.",
        "popularity": 283.548,
        "poster_path": "/a4BfxRK8dBgbQqbRxPs8kmLd8LG.jpg",
        "release_date": "2018-09-28",
        "title": "The Old Man & the Gun",
        "video": false,
        "vote_average": 6.3,
        "vote_count": 577,
      },
      Object {
        "adult": false,
        "backdrop_path": "/5myQbDzw3l8K9yofUXRJ4UTVgam.jpg",
        "genre_ids": Array [
          28,
          12,
          878,
        ],
        "id": 429617,
        "original_language": "en",
        "original_title": "Spider-Man: Far from Home",
        "overview": "Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent.",
        "popularity": 234.305,
        "poster_path": "/lcq8dVxeeOqHvvgcte707K0KVx5.jpg",
        "release_date": "2019-07-02",
        "title": "Spider-Man: Far from Home",
        "video": false,
        "vote_average": 7.7,
        "vote_count": 4044,
      },
    ],
    "type": "SET_FEATURED_LIST_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/qJXqEzjJOa93q50mrSSEr1ELsD6.jpg",
        "genre_ids": Array [
          10749,
          10751,
        ],
        "id": 540158,
        "original_language": "en",
        "original_title": "High Strung Free Dance",
        "overview": "Zander Raines, a dazzling and tempestuous young choreographer, gives the break of a lifetime to two hopeful artists when he casts a stunning contemporary dancer, Barlow, and innovative pianist, Charlie, in New York’s most-anticipated new Broadway show: Free Dance. But the move throws off the show’s delicate creative balance when Charlie falls hard for Barlow while Zander embraces her as his muse.",
        "popularity": 9.434,
        "poster_path": "/zMwr9vNMHNCNatIPm7Oter0NVw.jpg",
        "release_date": "2019-10-11",
        "title": "High Strung Free Dance",
        "video": false,
        "vote_average": 7.3,
        "vote_count": 53,
      },
      Object {
        "adult": false,
        "backdrop_path": "/a47QIHxJnLLBDnTOwopZ8YBhxfl.jpg",
        "genre_ids": Array [
          35,
          27,
        ],
        "id": 13094,
        "original_language": "en",
        "original_title": "Dance of the Dead",
        "overview": "With Prom only hours away, the usual suspects of Cosa High (Cheerleaders, geeks, bad boys and the happy-go-lucky student council alike) are preoccupied with the annual rituals of teendom. On the night of the big dance when the dead unexpectedly rise to eat the living, polar opposite groups will be forced to unite in their final chance to save the town from the zombies.",
        "popularity": 4.996,
        "poster_path": "/A4PmOlgQupYv9GNpsaRBHBBTBFf.jpg",
        "release_date": "2008-10-14",
        "title": "Dance of the Dead",
        "video": false,
        "vote_average": 6,
        "vote_count": 99,
      },
    ],
    "type": "SET_SHOWN_LIST_SUCCESS",
  },
]
`;

exports[`Testing homeActions Testing Success Actions sortByRating is set on action flipSortByRating 1`] = `
Array [
  Object {
    "payload": Object {
      "10402": "Music",
      "10749": "Romance",
      "10751": "Family",
      "10752": "War",
      "10770": "TV Movie",
      "12": "Adventure",
      "14": "Fantasy",
      "16": "Animation",
      "18": "Drama",
      "27": "Horror",
      "28": "Action",
      "35": "Comedy",
      "36": "History",
      "37": "Western",
      "53": "Thriller",
      "80": "Crime",
      "878": "Science Fiction",
      "9648": "Mystery",
      "99": "Documentary",
    },
    "type": "SET_GENRE_MAP_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/6X2YjjYcs8XyZRDmJAHNDlls7L4.jpg",
        "genre_ids": Array [
          35,
          80,
          18,
        ],
        "id": 429203,
        "original_language": "en",
        "original_title": "The Old Man & the Gun",
        "overview": "The true story of Forrest Tucker, from his audacious escape from San Quentin at the age of 70 to an unprecedented string of heists that confounded authorities and enchanted the public. Wrapped up in the pursuit are a detective, who becomes captivated with Forrest’s commitment to his craft, and a woman, who loves him in spite of his chosen profession.",
        "popularity": 283.548,
        "poster_path": "/a4BfxRK8dBgbQqbRxPs8kmLd8LG.jpg",
        "release_date": "2018-09-28",
        "title": "The Old Man & the Gun",
        "video": false,
        "vote_average": 6.3,
        "vote_count": 577,
      },
      Object {
        "adult": false,
        "backdrop_path": "/5myQbDzw3l8K9yofUXRJ4UTVgam.jpg",
        "genre_ids": Array [
          28,
          12,
          878,
        ],
        "id": 429617,
        "original_language": "en",
        "original_title": "Spider-Man: Far from Home",
        "overview": "Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent.",
        "popularity": 234.305,
        "poster_path": "/lcq8dVxeeOqHvvgcte707K0KVx5.jpg",
        "release_date": "2019-07-02",
        "title": "Spider-Man: Far from Home",
        "video": false,
        "vote_average": 7.7,
        "vote_count": 4044,
      },
    ],
    "type": "SET_FEATURED_LIST_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/qJXqEzjJOa93q50mrSSEr1ELsD6.jpg",
        "genre_ids": Array [
          10749,
          10751,
        ],
        "id": 540158,
        "original_language": "en",
        "original_title": "High Strung Free Dance",
        "overview": "Zander Raines, a dazzling and tempestuous young choreographer, gives the break of a lifetime to two hopeful artists when he casts a stunning contemporary dancer, Barlow, and innovative pianist, Charlie, in New York’s most-anticipated new Broadway show: Free Dance. But the move throws off the show’s delicate creative balance when Charlie falls hard for Barlow while Zander embraces her as his muse.",
        "popularity": 9.434,
        "poster_path": "/zMwr9vNMHNCNatIPm7Oter0NVw.jpg",
        "release_date": "2019-10-11",
        "title": "High Strung Free Dance",
        "video": false,
        "vote_average": 7.3,
        "vote_count": 53,
      },
      Object {
        "adult": false,
        "backdrop_path": "/a47QIHxJnLLBDnTOwopZ8YBhxfl.jpg",
        "genre_ids": Array [
          35,
          27,
        ],
        "id": 13094,
        "original_language": "en",
        "original_title": "Dance of the Dead",
        "overview": "With Prom only hours away, the usual suspects of Cosa High (Cheerleaders, geeks, bad boys and the happy-go-lucky student council alike) are preoccupied with the annual rituals of teendom. On the night of the big dance when the dead unexpectedly rise to eat the living, polar opposite groups will be forced to unite in their final chance to save the town from the zombies.",
        "popularity": 4.996,
        "poster_path": "/A4PmOlgQupYv9GNpsaRBHBBTBFf.jpg",
        "release_date": "2008-10-14",
        "title": "Dance of the Dead",
        "video": false,
        "vote_average": 6,
        "vote_count": 99,
      },
    ],
    "type": "SET_SHOWN_LIST_SUCCESS",
  },
  Object {
    "payload": 54,
    "type": "SET_TOTAL_PAGES_SUCCESS",
  },
  Object {
    "payload": 634,
    "type": "SET_TOTAL_RESULTS_SUCCESS",
  },
  Object {
    "payload": false,
    "type": "SEARCH_ISEMPTY",
  },
  Object {
    "payload": false,
    "type": "SORTBY_RATING",
  },
]
`;

exports[`Testing homeActions Testing Success Actions totalPages is set on action setTotalPagesSuccess 1`] = `
Array [
  Object {
    "payload": Object {
      "10402": "Music",
      "10749": "Romance",
      "10751": "Family",
      "10752": "War",
      "10770": "TV Movie",
      "12": "Adventure",
      "14": "Fantasy",
      "16": "Animation",
      "18": "Drama",
      "27": "Horror",
      "28": "Action",
      "35": "Comedy",
      "36": "History",
      "37": "Western",
      "53": "Thriller",
      "80": "Crime",
      "878": "Science Fiction",
      "9648": "Mystery",
      "99": "Documentary",
    },
    "type": "SET_GENRE_MAP_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/6X2YjjYcs8XyZRDmJAHNDlls7L4.jpg",
        "genre_ids": Array [
          35,
          80,
          18,
        ],
        "id": 429203,
        "original_language": "en",
        "original_title": "The Old Man & the Gun",
        "overview": "The true story of Forrest Tucker, from his audacious escape from San Quentin at the age of 70 to an unprecedented string of heists that confounded authorities and enchanted the public. Wrapped up in the pursuit are a detective, who becomes captivated with Forrest’s commitment to his craft, and a woman, who loves him in spite of his chosen profession.",
        "popularity": 283.548,
        "poster_path": "/a4BfxRK8dBgbQqbRxPs8kmLd8LG.jpg",
        "release_date": "2018-09-28",
        "title": "The Old Man & the Gun",
        "video": false,
        "vote_average": 6.3,
        "vote_count": 577,
      },
      Object {
        "adult": false,
        "backdrop_path": "/5myQbDzw3l8K9yofUXRJ4UTVgam.jpg",
        "genre_ids": Array [
          28,
          12,
          878,
        ],
        "id": 429617,
        "original_language": "en",
        "original_title": "Spider-Man: Far from Home",
        "overview": "Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent.",
        "popularity": 234.305,
        "poster_path": "/lcq8dVxeeOqHvvgcte707K0KVx5.jpg",
        "release_date": "2019-07-02",
        "title": "Spider-Man: Far from Home",
        "video": false,
        "vote_average": 7.7,
        "vote_count": 4044,
      },
    ],
    "type": "SET_FEATURED_LIST_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/qJXqEzjJOa93q50mrSSEr1ELsD6.jpg",
        "genre_ids": Array [
          10749,
          10751,
        ],
        "id": 540158,
        "original_language": "en",
        "original_title": "High Strung Free Dance",
        "overview": "Zander Raines, a dazzling and tempestuous young choreographer, gives the break of a lifetime to two hopeful artists when he casts a stunning contemporary dancer, Barlow, and innovative pianist, Charlie, in New York’s most-anticipated new Broadway show: Free Dance. But the move throws off the show’s delicate creative balance when Charlie falls hard for Barlow while Zander embraces her as his muse.",
        "popularity": 9.434,
        "poster_path": "/zMwr9vNMHNCNatIPm7Oter0NVw.jpg",
        "release_date": "2019-10-11",
        "title": "High Strung Free Dance",
        "video": false,
        "vote_average": 7.3,
        "vote_count": 53,
      },
      Object {
        "adult": false,
        "backdrop_path": "/a47QIHxJnLLBDnTOwopZ8YBhxfl.jpg",
        "genre_ids": Array [
          35,
          27,
        ],
        "id": 13094,
        "original_language": "en",
        "original_title": "Dance of the Dead",
        "overview": "With Prom only hours away, the usual suspects of Cosa High (Cheerleaders, geeks, bad boys and the happy-go-lucky student council alike) are preoccupied with the annual rituals of teendom. On the night of the big dance when the dead unexpectedly rise to eat the living, polar opposite groups will be forced to unite in their final chance to save the town from the zombies.",
        "popularity": 4.996,
        "poster_path": "/A4PmOlgQupYv9GNpsaRBHBBTBFf.jpg",
        "release_date": "2008-10-14",
        "title": "Dance of the Dead",
        "video": false,
        "vote_average": 6,
        "vote_count": 99,
      },
    ],
    "type": "SET_SHOWN_LIST_SUCCESS",
  },
  Object {
    "payload": 54,
    "type": "SET_TOTAL_PAGES_SUCCESS",
  },
]
`;

exports[`Testing homeActions Testing Success Actions totalResults is set on action setTotalResultsSuccess 1`] = `
Array [
  Object {
    "payload": Object {
      "10402": "Music",
      "10749": "Romance",
      "10751": "Family",
      "10752": "War",
      "10770": "TV Movie",
      "12": "Adventure",
      "14": "Fantasy",
      "16": "Animation",
      "18": "Drama",
      "27": "Horror",
      "28": "Action",
      "35": "Comedy",
      "36": "History",
      "37": "Western",
      "53": "Thriller",
      "80": "Crime",
      "878": "Science Fiction",
      "9648": "Mystery",
      "99": "Documentary",
    },
    "type": "SET_GENRE_MAP_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/6X2YjjYcs8XyZRDmJAHNDlls7L4.jpg",
        "genre_ids": Array [
          35,
          80,
          18,
        ],
        "id": 429203,
        "original_language": "en",
        "original_title": "The Old Man & the Gun",
        "overview": "The true story of Forrest Tucker, from his audacious escape from San Quentin at the age of 70 to an unprecedented string of heists that confounded authorities and enchanted the public. Wrapped up in the pursuit are a detective, who becomes captivated with Forrest’s commitment to his craft, and a woman, who loves him in spite of his chosen profession.",
        "popularity": 283.548,
        "poster_path": "/a4BfxRK8dBgbQqbRxPs8kmLd8LG.jpg",
        "release_date": "2018-09-28",
        "title": "The Old Man & the Gun",
        "video": false,
        "vote_average": 6.3,
        "vote_count": 577,
      },
      Object {
        "adult": false,
        "backdrop_path": "/5myQbDzw3l8K9yofUXRJ4UTVgam.jpg",
        "genre_ids": Array [
          28,
          12,
          878,
        ],
        "id": 429617,
        "original_language": "en",
        "original_title": "Spider-Man: Far from Home",
        "overview": "Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent.",
        "popularity": 234.305,
        "poster_path": "/lcq8dVxeeOqHvvgcte707K0KVx5.jpg",
        "release_date": "2019-07-02",
        "title": "Spider-Man: Far from Home",
        "video": false,
        "vote_average": 7.7,
        "vote_count": 4044,
      },
    ],
    "type": "SET_FEATURED_LIST_SUCCESS",
  },
  Object {
    "payload": Array [
      Object {
        "adult": false,
        "backdrop_path": "/qJXqEzjJOa93q50mrSSEr1ELsD6.jpg",
        "genre_ids": Array [
          10749,
          10751,
        ],
        "id": 540158,
        "original_language": "en",
        "original_title": "High Strung Free Dance",
        "overview": "Zander Raines, a dazzling and tempestuous young choreographer, gives the break of a lifetime to two hopeful artists when he casts a stunning contemporary dancer, Barlow, and innovative pianist, Charlie, in New York’s most-anticipated new Broadway show: Free Dance. But the move throws off the show’s delicate creative balance when Charlie falls hard for Barlow while Zander embraces her as his muse.",
        "popularity": 9.434,
        "poster_path": "/zMwr9vNMHNCNatIPm7Oter0NVw.jpg",
        "release_date": "2019-10-11",
        "title": "High Strung Free Dance",
        "video": false,
        "vote_average": 7.3,
        "vote_count": 53,
      },
      Object {
        "adult": false,
        "backdrop_path": "/a47QIHxJnLLBDnTOwopZ8YBhxfl.jpg",
        "genre_ids": Array [
          35,
          27,
        ],
        "id": 13094,
        "original_language": "en",
        "original_title": "Dance of the Dead",
        "overview": "With Prom only hours away, the usual suspects of Cosa High (Cheerleaders, geeks, bad boys and the happy-go-lucky student council alike) are preoccupied with the annual rituals of teendom. On the night of the big dance when the dead unexpectedly rise to eat the living, polar opposite groups will be forced to unite in their final chance to save the town from the zombies.",
        "popularity": 4.996,
        "poster_path": "/A4PmOlgQupYv9GNpsaRBHBBTBFf.jpg",
        "release_date": "2008-10-14",
        "title": "Dance of the Dead",
        "video": false,
        "vote_average": 6,
        "vote_count": 99,
      },
    ],
    "type": "SET_SHOWN_LIST_SUCCESS",
  },
  Object {
    "payload": 54,
    "type": "SET_TOTAL_PAGES_SUCCESS",
  },
  Object {
    "payload": 634,
    "type": "SET_TOTAL_RESULTS_SUCCESS",
  },
]
`;
